# RoToSY

./: .gitignore  README.md
doosan_controller/: PALLETIZING.md  package.xml  setup.py
doosan_controller/config/: cabinet_geometry.yaml  drawer_tcp_calibration.yaml  robot_params.yaml
doosan_controller/doosan_controller/: arm_controller_node.py  cabinet_geometry_calibrator.py  hybrid_ik_node.py  motion_sequence.py  palletizing_planner.py  palletizing_sequence.py  tcp_monitor.py  temp_sequence.py  test_moveC.py  test_movel.py
doosan_controller/launch/: robot_controller.launch.py
dsr_safety_recovery/: package.xml  setup.cfg  setup.py
dsr_safety_recovery/dsr_safety_recovery/: node.py
dsr_safety_recovery/dsr_safety_recovery/static/: index.html
dsr_safety_recovery/launch/: safety_recovery.launch.py
hospital_web/: .gitignore  BUILD_REPORT.md  README.md  foryou.md  run.sh
hospital_web/backend/: camera.py  db_schema.py  demo_create.py  drawer_metadata.py  hospital.db  main.py  mission_state.py  ocr_verify.py  orchestrator.py  pallet_pack.py  prescription_state.py  requirements.txt  robot_bridge.py  robot_proxy.py  ros_bridge.py  sensor_data.db  sensor_db.py  top_face_detector.py  vision_detector.py
hospital_web/backend/routers/: amr.py  demo.py  manual_calib.py  medicine.py  ocr.py  orchestrator.py  pallet.py  patient.py  prescription.py  robot.py  sensor.py  system.py  vision.py  web_compat.py
hospital_web/backend/static/: admin.html  amr_test.html  nurse.html  pallet.html  patient.html  pharmacist.html  test.html
hospital_web/docs/: guide.html
mobile_simulation/: package.xml  setup.cfg  setup.py
mobile_simulation/config/: nav2_params.yaml
mobile_simulation/launch/: mobile_simulation.launch.py
mobile_simulation/materials/meshes/: sign_plane.dae
mobile_simulation/materials/scripts/: mobile_simulation_signs.material
mobile_simulation/mobile_simulation/: demo_goal_sender.py  initial_pose_publisher.py
mobile_simulation/models/mobile_delivery_robot/: model.config  model.sdf
mobile_simulation/worlds/: mobile_delivery.world
plc_controller/: package.xml  setup.cfg  setup.py
plc_controller/config/: plc.yaml
plc_controller/launch/: plc.launch.py
plc_controller/plc_controller/: plc_bridge_node.py  plc_controller_node.py  test_plc.py
robot_arm_interfaces/: CMakeLists.txt  package.xml
robot_arm_interfaces/action/: MoveJ.action  MoveL.action
robot_arm_interfaces/msg/: PlcCommand.msg  PlcStatus.msg  RobotStatus.msg
robot_arm_interfaces/srv/: EStop.srv  Home.srv  Jog.srv  PlcSetOutput.srv  Recover.srv  ServoOn.srv  Teaching.srv  WaitDuration.srv
rotosy_calibration/: package.xml  setup.cfg  setup.py
rotosy_calibration/config/: aruco_camera_calibration.yaml  calibration_motion.yaml  camera_extrinsic.example.yaml  camera_extrinsic.yaml  optimized_calibration_motion.yaml
rotosy_calibration/launch/: aruco_camera_calibration.launch.py  aruco_camera_calibration_with_motion.launch.py  realsense_topic_publisher.launch.py
rotosy_calibration/rotosy_calibration/: aruco_camera_calibrator.py  calibration_motion_runner.py  realsense_topic_publisher.py  tf_messages.py  touch_calibration.py  transform_math.py
rotosy_gripper_control/: README.md  package.xml  setup.cfg  setup.py
rotosy_gripper_control/launch/: keyboard_electromagnet_gripper.launch.py
rotosy_gripper_control/rotosy_gripper_control/: keyboard_electromagnet_gripper.py
web_interface/: package.xml  setup.py
web_interface/web_interface/: camera.py  main.py  medicine_box_center_detector.py  medicine_box_center_detector_with_vision.py  ros_node.py  vision_detector.py  yolo_calibrated_dual_canny_detector.py
web_interface/web_interface/routers/: control.py  gripper.py  inverter.py  manual_calib.py  status.py
web_interface/web_interface/static/: index.html
