<?xml version="1.0"?>
<package format="3">
  <name>dsr_safety_recovery</name>
  <version>0.0.1</version>
  <description>DSR E0509 safety recovery node with web UI</description>
  <maintainer email="cjfgml0221@naver.com">cheol</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>robot_arm_interfaces</depend>
  <depend>dsr_msgs2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
