<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rotosy_calibration</name>
  <version>0.1.0</version>
  <description>Camera-to-robot TF calibration utilities for RoToSY.</description>
  <maintainer email="cjfgml0221@naver.com">RoToSY</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>robot_arm_interfaces</depend>

  <exec_depend>doosan_controller</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
