<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rotosy_gripper_control</name>
  <version>0.1.0</version>
  <description>Flange I/O gripper control examples for RoToSY Doosan E0509.</description>
  <maintainer email="cjfgml0221@naver.com">RoToSY</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>dsr_msgs2</depend>
  <depend>robot_arm_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
